[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ros_deps"
version = "0.0.1"
description = "Scrape ROS dependencies from a catkin workspace."

dependencies = ["defusedxml"]

[tool.ruff] # Use the same settings as Black
line-length = 88
indent-width = 4

[tool.ruff.lint] # Default to all Ruff rules, ignores to be added as necessary
select = ["ALL"]
ignore = ["ANN101", "ANN204"] # Ignore type annotations on `self` and __init__
unfixable = ["F401"]          # Disable 'fix' for unused imports

[tool.ruff.lint.per-file-ignores]
"**/tests/*" = ["S101"]   # Ignore assertions in test files
"**/scripts/*" = ["T201"] # Ignore print statements in scripts

[tool.ruff.format] # Use the same settings as Black
quote-style = "double"
indent-style = "space"
