[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ros_deps"
version = "0.0.1"
description = "Scrape ROS dependencies from a catkin workspace."

dependencies = ["defusedxml"]

[project.optional-dependencies]
dev = ["ruff", "mypy"]

[project.scripts]
scrape-ros-deps = "ros_deps.scripts.scraper:main"

[tool.ruff] # Use the same settings as Black
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = ["ALL"] # Default to all Ruff rules, add ignores as needed

ignore = [
    "D203", # Don't place a blank line before a class docstring
    "D213", # Don't begin a docstring on its second line
]

unfixable = ["F401"] # Disable 'fix' for unused imports

[tool.ruff.lint.flake8-annotations]
mypy-init-return = true # Allow omission of return type on __init__

[tool.ruff.lint.per-file-ignores]
"**/tests/*" = ["S101"]   # Allow assertions in test files
"**/scripts/*" = ["T201"] # Allow print statements in scripts

[tool.ruff.format] # Use the same settings as Black
quote-style = "double"
indent-style = "space"

[tool.mypy]
disallow_untyped_defs = true
disallow_any_unimported = true
implicit_optional = false
check_untyped_defs = true
warn_return_any = true
show_error_code_links = true
warn_unused_configs = true     # Warn if any per-module mypy settings go unused
